# scsys-xtask

./: .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md
.config/: default.config.toml
.github/: dependabot.yml
.github/workflows/: cleanup.yml  clippy.yml  crates.yml  docker.yml  release.yml  rust.yml
src/: error.rs  lib.rs
src/cli/: interface.rs  mod.rs  opts.rs
src/cli/opts/: build.rs
src/cli/types/: targets.rs
src/pipes/: mod.rs
src/pipes/watch/: builder.rs  config.rs  mod.rs  state.rs
src/pipes/watch/builder/: impl_builder.rs  impl_inner.rs
tests/: default.rs
