[package]
authors = [
    "FL03 <jo3mccain@icloud.com>", 
    "Scattered-Systems <support@scsys.io>"
]
categories = ["dev-tools"]
default-run = "scatpack"
description = "A custom build system for the scsys ecosystem"
edition = "2024"
homepage =  "https://github.com/scattered-systems/scsys-xtask/wiki"
name = "scsys-xtask"
repository = "https://github.com/scattered-systems/scsys-xtask.git"
rust-version = "1.85.0"
version = "0.0.0"


[[bin]]
name = "scatpack"
path = "bin/xtask.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { features = ["cargo", "derive", "env"], version = "4" }
duct = { optional = true, version = "1" }
# serialization
serde = { features = ["derive"], version = "1" }
serde_json = "1"